--- a/hello.html
+++ b/hello.html
@@ -4,7 +4,7 @@
         <title>Hello!</title>
     </head>
     <body>
-        <h1 style="color:blue">Welcome to My Website!!</h1>
+        <h1 style="color:green">Welcome to My Website!!</h1>
         <h2>Hello</h2>
         <h2>How are you?</h2>
         <h2>I'm fine thankyou</h2>
