--- a/hello.html
+++ b/hello.html
@@ -4,11 +4,7 @@
         <title>Hello!</title>
     </head>
     <body>
-<<<<<<< HEAD
-        <h1 style="color:blue">Welcome to My Website!!!</h1>
-=======
-        <h1 style="color:green">Welcome to My Website!!</h1>
->>>>>>> 8726f1736693c248739bc4ea5a501e1b701276df
+        <h1 style="color:green">Welcome to My Website!!!</h1>
         <h2>Hello</h2>
         <h2>How are you?</h2>
         <h2>I'm fine thankyou</h2>
